codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_shows_hidden_side.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Corbanu Terminal to do anything                                           "
"                                                                                "
"  Ambient GLM 5.2 via ambient                                ctrl + / for side  "
