codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__spawn_effort_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3515
expression: popup
---
  Select Reasoning Level for GPT-5.6-Sol

  1. Low (default)    Fast responses with lighter reasoning
  2. Medium           Balances speed and reasoning depth for everyday tasks
  3. High             Greater reasoning depth for complex problems
› 4. Extra high       Extra high reasoning depth for complex problems
  5. More reasoning…  Max and Ultra consume usage limits faster

  Press enter to confirm or esc to go back
