codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__spawn_model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Corbanu Terminal Nazgul pane - OpenAI Codex plan

  [OpenAI]  Ambient  Corbanu API  Kimi Code  Z.AI  DeepSeek  Claude Plan  Anthropic  Meta  Vercel
  Baseten  OpenRouter

  1. GPT-5.5                Model: gpt-5.5. Frontier model for complex coding, research, and real-
                            world work.
  2. GPT-6 Astra            Model: gpt-6-astra. Advanced reasoning and coding. Requires eligible
                            OpenAI account access.
  3. GPT-6 Sol              Model: gpt-6-sol. Cost-efficient high-end GPT-6 reasoning and coding,
                            below Astra and above Luna. Requires eligible OpenAI account access;
                            ChatGPT sign-in may reject it.
› 4. GPT-5.6-Sol (current)  Model: gpt-5.6-sol. Latest frontier agentic coding model.
  5. GPT-5.6-Terra          Model: gpt-5.6-terra. Balanced agentic coding model for everyday work.
  6. GPT-5.6-Luna           Model: gpt-5.6-luna. Fast and affordable agentic coding model.

  Use Left/Right to switch providers. Press Enter to confirm or Esc to go back
